# meta-workspace

./: .gitignore  .mcp.example.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  workspace.yaml
.agents/: AGENTS.md
.agents/instructions/: memory.md  meta-workspace.md  project-registry.md  sdd.md  worktree-workflow.md
.agents/templates/: pr-review.md  project.md  repository.md  worktree-task.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tooling.yml
.pi/: settings.json
.sdd/: manifest.json
company/: README.md  instructions.md  terminology.md
docs/: README.md  distribution.md  workspace-contract.md
scripts/: bootstrap.sh  check-symlinks.sh  doctor.sh  install-agent-links.sh  install-memory.sh  new-project.sh  session-start.sh
template/: .env.example  BOOTSTRAP.md  INSTALL.md  README.md  workspace.yaml
template/.agents/: AGENTS.md  policies.yaml
template/.agents/instructions/: mempalace.md  pr-work.md  prism.md  sdd.md
template/.agents/templates/: company-profile.md  handoff.md
template/.claude/: settings.json
template/.codex/: config.toml
template/.kiro/: README.md
template/.pi/extensions/: mw-policy.ts
template/.sdd/: README.md
template/company/: profile.md
template/docs/workflows/: README.md
template/projects/: README.md  registry.yaml
template/scripts/: install-sdd.sh  update-sdd.sh
tooling/: Cargo.toml  README.md
tooling/src/: cli.rs  embed.rs  lib.rs  links.rs  main.rs  registry.rs  scaffold.rs  sdd.rs  workspace.rs
tooling/src/commands/: add_project.rs  doctor.rs  hook.rs  init.rs  links.rs  memory.rs  migrate.rs  mod.rs  policy.rs  sdd.rs
tooling/tests/: cli.rs
